--- a/test.yaml
+++ b/test.yaml
@@ -15,3 +15,8 @@ steps:
     inputs:
       testRunner: VSTest
       testResultsFiles: '**/*.trx'
+    env:
+      http_proxy: $(Agent.ProxyUrl)
+      https_proxy: $(Agent.ProxyUrl)
+      HTTP_PROXY: $(Agent.ProxyUrl)
+      HTTPS_PROXY: $(Agent.ProxyUrl)
