--- a/test.yaml
+++ b/test.yaml
@@ -16,5 +16,5 @@ steps:
       testRunner: VSTest
       testResultsFiles: '**/*.trx'
     env:
-      http_proxy: $(Agent.ProxyUrl)
-      https_proxy: $(Agent.ProxyUrl)
+      HTTP_PROXY: $(Agent.ProxyUrl)
+      HTTPS_PROXY: $(Agent.ProxyUrl)
