--- a/test.yaml
+++ b/test.yaml
@@ -15,6 +15,7 @@ steps:
     inputs:
       testRunner: VSTest
       testResultsFiles: '**/*.trx'
+      publishRunAttachments: false
     env:
-      HTTP_PROXY: $(Agent.ProxyUrl)
-      HTTPS_PROXY: $(Agent.ProxyUrl)
+      http_proxy: $(Agent.ProxyUrl)
+      https_proxy: $(Agent.ProxyUrl)
