Restrict the search for test results

--- a/test.yaml
+++ b/test.yaml
@@ -15,6 +15,7 @@ steps:
     inputs:
       testRunner: VSTest
       testResultsFiles: '**/*.trx'
+      searchFolder: $(Build.SourcesDirectory)/TestResults
       publishRunAttachments: false
     env:
       http_proxy: $(Agent.ProxyUrl)
